--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
+        "less": "^4.1.1",
+        "less-loader": "^8.0.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
