[Implementation] Less Modules

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,12 +2,25 @@
     "/js/app.js": "/js/app.js",
     "/css/index.css": "/css/index.css",
     "/css/all.css": "/css/all.css",
-    "/assets/active-star.svg": "/assets/active-star.svg",
-    "/assets/back_button.svg": "/assets/back_button.svg",
-    "/assets/bg-graphics.png": "/assets/bg-graphics.png",
-    "/assets/ice_moutntain.png": "/assets/ice_moutntain.png",
-    "/assets/inactive-star.svg": "/assets/inactive-star.svg",
-    "/assets/logo.svg": "/assets/logo.svg",
-    "/assets/nav-icon.svg": "/assets/nav-icon.svg",
-    "/assets/x-icon.svg": "/assets/x-icon.svg"
+    "/assets/images/bg-graphics.png": "/assets/images/bg-graphics.png",
+    "/assets/images/bg-home.png": "/assets/images/bg-home.png",
+    "/assets/icons/mobile-close-icon.svg": "/assets/icons/mobile-close-icon.svg",
+    "/assets/icons/mobile-nav-icon.svg": "/assets/icons/mobile-nav-icon.svg",
+    "/assets/icons/web-back-icon.svg": "/assets/icons/web-back-icon.svg",
+    "/assets/icons/web-icon.svg": "/assets/icons/web-icon.svg",
+    "/assets/webfonts/fa-brands-400.eot": "/assets/webfonts/fa-brands-400.eot",
+    "/assets/webfonts/fa-brands-400.svg": "/assets/webfonts/fa-brands-400.svg",
+    "/assets/webfonts/fa-brands-400.ttf": "/assets/webfonts/fa-brands-400.ttf",
+    "/assets/webfonts/fa-brands-400.woff": "/assets/webfonts/fa-brands-400.woff",
+    "/assets/webfonts/fa-brands-400.woff2": "/assets/webfonts/fa-brands-400.woff2",
+    "/assets/webfonts/fa-regular-400.eot": "/assets/webfonts/fa-regular-400.eot",
+    "/assets/webfonts/fa-regular-400.svg": "/assets/webfonts/fa-regular-400.svg",
+    "/assets/webfonts/fa-regular-400.ttf": "/assets/webfonts/fa-regular-400.ttf",
+    "/assets/webfonts/fa-regular-400.woff": "/assets/webfonts/fa-regular-400.woff",
+    "/assets/webfonts/fa-regular-400.woff2": "/assets/webfonts/fa-regular-400.woff2",
+    "/assets/webfonts/fa-solid-900.eot": "/assets/webfonts/fa-solid-900.eot",
+    "/assets/webfonts/fa-solid-900.svg": "/assets/webfonts/fa-solid-900.svg",
+    "/assets/webfonts/fa-solid-900.ttf": "/assets/webfonts/fa-solid-900.ttf",
+    "/assets/webfonts/fa-solid-900.woff": "/assets/webfonts/fa-solid-900.woff",
+    "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2"
 }
