[Implementation] Notice Module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,5 +22,6 @@
     "/assets/webfonts/fa-solid-900.svg": "/assets/webfonts/fa-solid-900.svg",
     "/assets/webfonts/fa-solid-900.ttf": "/assets/webfonts/fa-solid-900.ttf",
     "/assets/webfonts/fa-solid-900.woff": "/assets/webfonts/fa-solid-900.woff",
-    "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2"
+    "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2",
+    "/css/index.min.css": "/css/index.min.css"
 }
