--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.18",
         "less": "^4.1.1",
         "less-loader": "^8.0.0",
         "lodash": "^4.17.19",
+        "mix": "0.0.1",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^2.3.1",
