--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/index.css": "/css/index.css",
     "/css/all.css": "/css/all.css",
     "/assets/images/bg-graphics.png": "/assets/images/bg-graphics.png",
     "/assets/images/bg-home.png": "/assets/images/bg-home.png",
@@ -22,6 +23,5 @@
     "/assets/webfonts/fa-solid-900.ttf": "/assets/webfonts/fa-solid-900.ttf",
     "/assets/webfonts/fa-solid-900.woff": "/assets/webfonts/fa-solid-900.woff",
     "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2",
-    "/css/index.min.css": "/css/index.min.css",
-    "/css/index.css": "/css/index.css"
+    "/css/index.min.css": "/css/index.min.css"
 }
