--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/admin.css": "/css/admin.css",
-    "/css/user.css": "/css/user.css",
     "/css/all.css": "/css/all.css",
     "/assets/images/bg-graphics.png": "/assets/images/bg-graphics.png",
     "/assets/images/bg-home.png": "/assets/images/bg-home.png",
@@ -25,5 +24,6 @@
     "/assets/webfonts/fa-solid-900.woff": "/assets/webfonts/fa-solid-900.woff",
     "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2",
     "/css/user.min.css": "/css/user.min.css",
-    "/css/admin.min.css": "/css/admin.min.css"
+    "/css/admin.min.css": "/css/admin.min.css",
+    "/css/user.css": "/css/user.css"
 }
