--- a/.env copy
+++ b/.env copy
@@ -1,16 +1,16 @@
 # -- APPLICATION CONFIGURATION --
-APP_NAME="EXAMPLE APP"
+APP_NAME="Leniel Luzardo"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ifPSguwSM46DeTsOB2uF++DywOVUi9XYFcFifEo0uyo=
 APP_DEBUG=true
-APP_URL=https://www.example.com
+APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example_database
+DB_DATABASE=lenielluzardocom
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -37,7 +37,7 @@ MAIL_PASSWORD="secret"
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=web@example.com
 MAIL_FROM_NAME="${APP_NAME}"
-MAIL_TO=
+MAIL_TO=lenielluzardo.dev@gmail.com
 
 # ---- MAILGUN ----
 MAILGUN_DOMAIN=
@@ -53,7 +53,7 @@ AWS_BUCKET=
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=
+PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
@@ -61,7 +61,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 AUTHOR = 1
 
 # -- NOTIFICATION STATUS MESSAGES --
-NOTIFICATION_SUCCESS = "Notification message example"
+NOTIFICATION_SUCCESS = "Hello there!, Thanks for your interest. I'll respond you back soon."
 
 # -- GOOGLE RECAPTCHA API --
 NOCAPTCHA_SITEKEY = 6LeiylcaAAAAAILSoh6OmOLhviSe4fHw8lxWg3ZQ
@@ -70,20 +70,20 @@ NOCAPTCHA_RESPONSE_REQUIRED = "You must check the reCAPTCHA"
 NOCAPTCHA_RESPONSE_CAPTCHA = "Captcha error! try again later or contact site administrator"
 
 # -- ADMIN INFO --
-ADMIN_USER_NAME="Example Name"
-ADMIN_USER_NICKNAME="ExampleNickname"
-ADMIN_USER_EMAIL="example@example.com"
-ADMIN_USER_PASS="secret"
-ADMIN_USER_DESCRIPTION="Example Description. Lorem Ipsum"
-ADMIN_USER_ABOUT="About Example . Lorem Ipsum"
-ADMIN_USER_PROFILE_IMG="http://via.placeholder.com/600"
-ADMIN_USER_RECOVERY_EMAIL="example_recovery@example.com"
+ADMIN_USER_NAME="John Doe"
+ADMIN_USER_NICKNAME="lenielluzardo"
+ADMIN_USER_EMAIL="lenielluzardo@gmail.com"
+ADMIN_USER_PASS="123456789"
+ADMIN_USER_DESCRIPTION="blablablabla blablb lbalbalbalba ablaba"
+ADMIN_USER_ABOUT="blablablabla"
+ADMIN_USER_PROFILE_IMG="vadsdasd"
+ADMIN_USER_RECOVERY_EMAIL="lenielluzardo.dev@gmail.com"
 
 # -- SOCIAL MEDIA LINKS --
-SOCIAL_GH="https://github.com/your-profile"
-SOCIAL_LI="https://www.linkedin.com/in/your-profile/"
-SOCIAL_BH="https://www.behance.net/your-profile"
-SOCIAL_YT="https://www.youtube.com/channel/your-profile"
-SOCIAL_TW="https://twitter.com/your-profile"
-SOCIAL_IG="https://www.instagram.com/your-profile/"
-SOCIAL_FB="https://www.facebook.com/your-profile"
+SOCIAL_GH="https://github.com/lenielluzardo"
+SOCIAL_LI="https://www.linkedin.com/in/lenielluzardo/"
+SOCIAL_BH="https://www.behance.net/lenielluzardo"
+SOCIAL_YT="https://www.youtube.com/channel/UCOXeKi--SlRXSXujPvJNGBA"
+SOCIAL_TW="https://twitter.com/LenielLuzardo"
+SOCIAL_IG="https://www.instagram.com/lenielluzardo/"
+SOCIAL_FB="https://www.facebook.com/lenielluzardo"
