--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/admin/index.js": "/js/admin/index.js",
     "/js/app.js": "/js/app.js",
     "/js/modal.js": "/js/modal.js",
     "/css/admin.css": "/css/admin.css",
