--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/modal.js": "/js/modal.js",
+    "/css/admin/index.css": "/css/admin/index.css",
     "/css/index.css": "/css/index.css",
     "/css/all.css": "/css/all.css",
     "/assets/images/bg-graphics.png": "/assets/images/bg-graphics.png",
@@ -25,6 +26,5 @@
     "/assets/webfonts/fa-solid-900.woff": "/assets/webfonts/fa-solid-900.woff",
     "/assets/webfonts/fa-solid-900.woff2": "/assets/webfonts/fa-solid-900.woff2",
     "/css/index.min.css": "/css/index.min.css",
-    "/css/admin/index.min.css": "/css/admin/index.min.css",
-    "/css/admin/index.css": "/css/admin/index.css"
+    "/css/admin/index.min.css": "/css/admin/index.min.css"
 }
